// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`App component > Render home page 1`] = `
<div>
  <div
    class="_app_812fc8"
  >
    <header
      class="_header_812fc8"
    >
      <div
        class="_title_812fc8"
      >
        <div
          class="_layoutContainer_812fc8"
        >
          <div
            class="_storeName_812fc8"
          >
            <img
              alt="vinyl record with tonearm and stylus on it"
              class="_logo_812fc8"
              src="/waxdisc-logo.png"
            />
            <h1>
              WAXDISC
            </h1>
          </div>
          <a
            class="_cart_812fc8"
            data-discover="true"
            href="/crate"
          >
            <span
              class="_cartCount_812fc8"
            />
            <img
              alt="crate outline icon"
              src="/src/assets/crate-outline.png"
            />
          </a>
        </div>
      </div>
      <nav
        class="_navbar_812fc8"
      >
        <ul>
          <li>
            <a
              data-discover="true"
              href="/"
            >
              Home
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/shop/new-releases"
            >
              Shop
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/about"
            >
              About
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/crate"
            >
              Crate
            </a>
          </li>
        </ul>
      </nav>
    </header>
    <main
      class="_content_812fc8"
    >
      <div
        class="_layoutContainer_812fc8"
      >
        <div
          class="_home_621afd"
        >
          <div
            class="_heroCarousel_869c5f"
          >
            <button
              class="_previous_869c5f"
            >
              Previous
            </button>
            <img
              alt="Interior of a vinyl store with people browsing in soft focus"
              class="_visible_869c5f"
              src="/src/assets/store-interior.jpg"
            />
            <img
              alt="Interior of a vinyl store with people browsing the collection"
              class="_hidden_869c5f"
              src="/src/assets/store-interior-2.jpg"
            />
            <img
              alt="MM..FOOD - MF DOOM vinyl"
              class="_hidden_869c5f"
              src="/src/assets/doom-vinyl.jpg"
            />
            <button
              class="_next_869c5f"
            >
              Next
            </button>
          </div>
          <p>
            Loading...
          </p>
        </div>
      </div>
    </main>
    <footer
      class="_footer_088786"
    >
      <div
        class="_layoutContainer_088786"
      >
        <div>
          <h2>
            WAXDISC
          </h2>
          <p>
            Home to Australia's best vinyl collection
          </p>
        </div>
        <ul>
          <h4>
            Help
          </h4>
          <li>
            <a>
              Track my order
            </a>
          </li>
          <li>
            <a>
              Returns
            </a>
          </li>
          <li>
            <a>
              Contact us
            </a>
          </li>
          <li>
            <a>
              Terms and conditions
            </a>
          </li>
        </ul>
        <ul>
          <h4>
            Company
          </h4>
          <li>
            <a>
              About us
            </a>
          </li>
          <li>
            <a>
              Store location
            </a>
          </li>
          <li>
            <a>
              Careers
            </a>
          </li>
          <li>
            <a>
              News
            </a>
          </li>
          <li>
            <a>
              Feedback
            </a>
          </li>
        </ul>
      </div>
    </footer>
  </div>
</div>
`;

exports[`App component > Visit crate page 1`] = `
<div>
  <div
    class="_app_812fc8"
  >
    <header
      class="_header_812fc8"
    >
      <div
        class="_title_812fc8"
      >
        <div
          class="_layoutContainer_812fc8"
        >
          <div
            class="_storeName_812fc8"
          >
            <img
              alt="vinyl record with tonearm and stylus on it"
              class="_logo_812fc8"
              src="/waxdisc-logo.png"
            />
            <h1>
              WAXDISC
            </h1>
          </div>
          <a
            class="_cart_812fc8"
            data-discover="true"
            href="/crate"
          >
            <span
              class="_cartCount_812fc8"
            />
            <img
              alt="crate outline icon"
              src="/src/assets/crate-outline.png"
            />
          </a>
        </div>
      </div>
      <nav
        class="_navbar_812fc8"
      >
        <ul>
          <li>
            <a
              data-discover="true"
              href="/"
            >
              Home
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/shop/new-releases"
            >
              Shop
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/about"
            >
              About
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/crate"
            >
              Crate
            </a>
          </li>
        </ul>
      </nav>
    </header>
    <main
      class="_content_812fc8"
    >
      <div
        class="_layoutContainer_812fc8"
      >
        <div
          class="_cartContainer_7e8544"
        >
          <div
            class="_title_7e8544"
          >
            <img
              alt="crate outline icon"
              class="_crateIcon_7e8544"
              src="/src/assets/crate-outline.png"
            />
            <h2>
              Your Crate
            </h2>
          </div>
          <p>
            Your crate is empty
          </p>
        </div>
      </div>
    </main>
    <footer
      class="_footer_088786"
    >
      <div
        class="_layoutContainer_088786"
      >
        <div>
          <h2>
            WAXDISC
          </h2>
          <p>
            Home to Australia's best vinyl collection
          </p>
        </div>
        <ul>
          <h4>
            Help
          </h4>
          <li>
            <a>
              Track my order
            </a>
          </li>
          <li>
            <a>
              Returns
            </a>
          </li>
          <li>
            <a>
              Contact us
            </a>
          </li>
          <li>
            <a>
              Terms and conditions
            </a>
          </li>
        </ul>
        <ul>
          <h4>
            Company
          </h4>
          <li>
            <a>
              About us
            </a>
          </li>
          <li>
            <a>
              Store location
            </a>
          </li>
          <li>
            <a>
              Careers
            </a>
          </li>
          <li>
            <a>
              News
            </a>
          </li>
          <li>
            <a>
              Feedback
            </a>
          </li>
        </ul>
      </div>
    </footer>
  </div>
</div>
`;

exports[`App component > Visit home page 1`] = `
<div>
  <div
    class="_app_812fc8"
  >
    <header
      class="_header_812fc8"
    >
      <div
        class="_title_812fc8"
      >
        <div
          class="_layoutContainer_812fc8"
        >
          <div
            class="_storeName_812fc8"
          >
            <img
              alt="vinyl record with tonearm and stylus on it"
              class="_logo_812fc8"
              src="/waxdisc-logo.png"
            />
            <h1>
              WAXDISC
            </h1>
          </div>
          <a
            class="_cart_812fc8"
            data-discover="true"
            href="/crate"
          >
            <span
              class="_cartCount_812fc8"
            />
            <img
              alt="crate outline icon"
              src="/src/assets/crate-outline.png"
            />
          </a>
        </div>
      </div>
      <nav
        class="_navbar_812fc8"
      >
        <ul>
          <li>
            <a
              data-discover="true"
              href="/"
            >
              Home
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/shop/new-releases"
            >
              Shop
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/about"
            >
              About
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/crate"
            >
              Crate
            </a>
          </li>
        </ul>
      </nav>
    </header>
    <main
      class="_content_812fc8"
    >
      <div
        class="_layoutContainer_812fc8"
      >
        <div
          class="_home_621afd"
        >
          <div
            class="_heroCarousel_869c5f"
          >
            <button
              class="_previous_869c5f"
            >
              Previous
            </button>
            <img
              alt="Interior of a vinyl store with people browsing in soft focus"
              class="_visible_869c5f"
              src="/src/assets/store-interior.jpg"
            />
            <img
              alt="Interior of a vinyl store with people browsing the collection"
              class="_hidden_869c5f"
              src="/src/assets/store-interior-2.jpg"
            />
            <img
              alt="MM..FOOD - MF DOOM vinyl"
              class="_hidden_869c5f"
              src="/src/assets/doom-vinyl.jpg"
            />
            <button
              class="_next_869c5f"
            >
              Next
            </button>
          </div>
          <p>
            Loading...
          </p>
        </div>
      </div>
    </main>
    <footer
      class="_footer_088786"
    >
      <div
        class="_layoutContainer_088786"
      >
        <div>
          <h2>
            WAXDISC
          </h2>
          <p>
            Home to Australia's best vinyl collection
          </p>
        </div>
        <ul>
          <h4>
            Help
          </h4>
          <li>
            <a>
              Track my order
            </a>
          </li>
          <li>
            <a>
              Returns
            </a>
          </li>
          <li>
            <a>
              Contact us
            </a>
          </li>
          <li>
            <a>
              Terms and conditions
            </a>
          </li>
        </ul>
        <ul>
          <h4>
            Company
          </h4>
          <li>
            <a>
              About us
            </a>
          </li>
          <li>
            <a>
              Store location
            </a>
          </li>
          <li>
            <a>
              Careers
            </a>
          </li>
          <li>
            <a>
              News
            </a>
          </li>
          <li>
            <a>
              Feedback
            </a>
          </li>
        </ul>
      </div>
    </footer>
  </div>
</div>
`;

exports[`App component > Visit non-existent page 1`] = `
<div>
  <p>
    I think you might be lost 🧐
  </p>
</div>
`;

exports[`App component > Visit shop page 1`] = `
<div>
  <div
    class="_app_812fc8"
  >
    <header
      class="_header_812fc8"
    >
      <div
        class="_title_812fc8"
      >
        <div
          class="_layoutContainer_812fc8"
        >
          <div
            class="_storeName_812fc8"
          >
            <img
              alt="vinyl record with tonearm and stylus on it"
              class="_logo_812fc8"
              src="/waxdisc-logo.png"
            />
            <h1>
              WAXDISC
            </h1>
          </div>
          <a
            class="_cart_812fc8"
            data-discover="true"
            href="/crate"
          >
            <span
              class="_cartCount_812fc8"
            />
            <img
              alt="crate outline icon"
              src="/src/assets/crate-outline.png"
            />
          </a>
        </div>
      </div>
      <nav
        class="_navbar_812fc8"
      >
        <ul>
          <li>
            <a
              data-discover="true"
              href="/"
            >
              Home
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/shop/new-releases"
            >
              Shop
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/about"
            >
              About
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/crate"
            >
              Crate
            </a>
          </li>
        </ul>
      </nav>
    </header>
    <main
      class="_content_812fc8"
    >
      <div
        class="_layoutContainer_812fc8"
      >
        <p>
          Loading...
        </p>
      </div>
    </main>
    <footer
      class="_footer_088786"
    >
      <div
        class="_layoutContainer_088786"
      >
        <div>
          <h2>
            WAXDISC
          </h2>
          <p>
            Home to Australia's best vinyl collection
          </p>
        </div>
        <ul>
          <h4>
            Help
          </h4>
          <li>
            <a>
              Track my order
            </a>
          </li>
          <li>
            <a>
              Returns
            </a>
          </li>
          <li>
            <a>
              Contact us
            </a>
          </li>
          <li>
            <a>
              Terms and conditions
            </a>
          </li>
        </ul>
        <ul>
          <h4>
            Company
          </h4>
          <li>
            <a>
              About us
            </a>
          </li>
          <li>
            <a>
              Store location
            </a>
          </li>
          <li>
            <a>
              Careers
            </a>
          </li>
          <li>
            <a>
              News
            </a>
          </li>
          <li>
            <a>
              Feedback
            </a>
          </li>
        </ul>
      </div>
    </footer>
  </div>
</div>
`;
